@@ -29,6 +29,7 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.function.Consumer;
@@ -1037,7 +1038,7 @@ public class SlimefunItem implements Placeable {
 
     @Override
     public @Nonnull Collection<ItemStack> getDrops() {
-        return Arrays.asList(itemStackTemplate.clone());
+        return List.of(itemStackTemplate.clone());
     }
 
     @Override
